--- a/index.html
+++ b/index.html
@@ -14,51 +14,100 @@
     <title>Jerick Arlantico</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header-container">
-            <div class="header-social-container">
-                <div class="header-social">
-                    <img src="images/fb_logo.png" id="fb-logo" alt=""fb_logo>
+    <div class="back">
+        <div class="container stack-top">
+            <div class="header-container">
+                <div class="header-social-container">
+                    <div class="header-social">
+                        <a href="https://www.facebook.com/jrk.Arlantico/" target="_blank"><img src="images/fb_logo.png" id="fb-logo" alt=""fb_logo></a>
+                    </div>
+                    <div class="header-social">
+                        <a href="mailto:arlanticojerick09@gmail.com"><img src="images/email-logo.png" id="fb-logo" alt=""fb_logo></a>
+                    </div>
                 </div>
-                <div class="header-social">
-                    <img src="images/email-logo.png" id="fb-logo" alt=""fb_logo>
+                <div class="header-cv">
+                    <a href="Jerick_Arlantico_CV.docx" download="Jerick_Arlantico_CV"><button class="button">Curriculum Vitae</button></a>
                 </div>
             </div>
-            <div class="header-cv">
-                <a href="Jerick_Arlantico_CV.docx" download="Jerick_Arlantico_CV">Download</a>
+            <div class="photo">
+                <a href="images/my_pic.jpg" data-lightbox="jerick_picture" data-title="Jerick P. Arlantico">
+                    <img src="images/my_pic.jpg" alt="">
+                </a>
             </div>
-        </div>
-        <div class="photo">
-            <img src="images/pic.png" alt="">
-        </div>
-        <!-- <div class="photo-container"> -->
-        <!-- </div> -->
-            
+            <!-- <div class="photo-container"> -->
+            <!-- </div> -->
+                
 
-        <div class="content-container">
-            <h1>Jerick P. Arlantico</h1>
-            <h2>BSIT 4-4</h2>
+            <div class="content-container">
+                <h1>Jerick P. Arlantico</h1>
+                <h2>BSIT 4-4</h2>
 
-            <fieldset>
-                <legend>Projects</legend>
-                <div class="project-container">
-                    <div class="project">
-                        <fieldset>
-                            <legend><h1>Library Monitoring System</h1></legend>
-                            <a href="images/library_moniroting_system.png" data-lightbox="image-1" data-title="Library Monitoring System">
-                                <img class="project-photo" width="350" src="images/library_moniroting_system.png" alt="project 1 photo">
-                            </a>
-                            <p>The library patron monitoring system is part of our capstone project. It displays all the data that is stored on the database. Data can also be exported in .xsls format</p>
-                        </fieldset>
+                <fieldset>
+                    <legend><h1>Projects</h1></legend>
+                    <div class="project-container">
+                        <div class="project">
+                            <fieldset>
+                                <legend><h2>Library Monitoring System</h2></legend>
+                                <a href="images/library_moniroting_system.png" data-lightbox="image-1" data-title="Library Monitoring System">
+                                    <img class="project-photo" width="350" src="images/library_moniroting_system.png" alt="library monitoring photo">
+                                </a>
+                                <h4>Nov 2022</h4>
+                                <p>The library patron monitoring system is part of our capstone project. I created this using PHP and JavaScript. It also integrates phpspreadsheet library to be able to export data in .xsls format</p>
+                            </fieldset>
+                        </div>
+                        <div class="project">
+                            <fieldset>
+                                <legend><h2>Online Shop using React</h2></legend>
+                                <a href="images/react_online_shop.png" data-lightbox="image-1" data-title="Online Shop using React">
+                                    <img class="project-photo" width="350" src="images/react_online_shop.png" alt="online shop photo">
+                                </a>
+                                <h4>March 2021</h4>
+                                <p>I created this website on the summer of 2021 as a practice project to explore the react framework and practice using API and AJAX request.</p>
+                            </fieldset>
+                        </div>
+                        <div class="project">
+                            <fieldset>
+                                <legend><a href="https://movietastic.000webhostapp.com/"><h2>Movie Ticketing</h2></a></legend>
+                                <a href="images/movie_ticketing.png" data-lightbox="image-1" data-title="Movie Ticketing">
+                                    <img class="project-photo" width="350" src="images/movie_ticketing.png" alt="movie ticketing photo">
+                                </a>
+                                <h4>December 2022</h4>
+                                <p>This is my final project on Advance Web Development during my 4th year. It integrates PHPMailer library to email  the receipt of the ticket. This is the first website that I hosted online.</p><br>
+                            </fieldset>
+                        </div>
+                        <div class="project">
+                            <fieldset>
+                                <legend><h2>Movie Review</h2></legend>
+                                <a href="images/movie_review.png" data-lightbox="image-1" data-title="Movie Review">
+                                    <img class="project-photo" width="350" src="images/movie_review.png" alt="movie review photo">
+                                </a>
+                                <h4>April 2022</h4>
+                                <p>This is my final project on Advance Web Development lab during my 4th year. It is created using OOP aproach and it integrates jquery framework.</p>
+                            </fieldset>
+                        </div>
+                        <div class="project">
+                            <fieldset>
+                                <legend><h2>Tic Tac Toe Game</h2></legend>
+                                <a href="images/tic_tac_toe.png" data-lightbox="image-1" data-title="Tic Tac Toe Game">
+                                    <img class="project-photo" width="350" src="images/tic_tac_toe.png" alt="tic tac toe photo">
+                                </a>
+                                <h4>Feb 2021</h4>
+                                <p>This is a website I created while following a free crash course about react framework.</p>
+                            </fieldset>
+                        </div>
+                        <div class="project">
+                            <fieldset>
+                                <legend><h2>Online Shop using Laravel</h2></legend>
+                                <a href="images/laravel_online_shop.png" data-lightbox="image-1" data-title="Laravel Online Shop">
+                                    <img class="project-photo" width="350" src="images/laravel_online_shop.png" alt="online shop photo">
+                                </a>
+                                <h4>May 2021</h4>
+                                <p>This is my final project on Web Development during my 3rd year. It is created using laravel framework.</p>
+                            </fieldset>
+                        </div>
                     </div>
-                    <div class="project">
-                        <h1>Project 2</h1>
-                    </div>
-                    <div class="project">
-                        <h1>Project 3</h1>
-                    </div>
-                </div>
-            </fieldset>
+                </fieldset>
+            </div>
         </div>
     </div>
 </body>
