--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <legend><h1>Projects</h1></legend>
                     <div class="project-container">
                         <div class="project">
-                                <legend><h1>Library Monitoring System</h2></legend>
+                                <h1>Library Monitoring System</h2>
                                 <a href="images/library_moniroting_system.png" data-lightbox="image-1" data-title="Library Monitoring System">
                                     <img class="project-photo" width="350" src="images/library_moniroting_system.png" alt="library monitoring photo">
                                 </a>
@@ -54,7 +54,7 @@
                                 <p>The library patron monitoring system is part of our capstone project. I created this using PHP and JavaScript. It also integrates phpspreadsheet library to be able to export data in .xsls format</p>
                         </div>
                         <div class="project">
-                                <legend><h1>Online Shop using React</h2></legend>
+                                <h1>Online Shop using React</h2>    
                                 <a href="images/react_online_shop.png" data-lightbox="image-1" data-title="Online Shop using React">
                                     <img class="project-photo" width="350" src="images/react_online_shop.png" alt="online shop photo">
                                 </a>
@@ -62,7 +62,7 @@
                                 <p>I created this website on the summer of 2021 as a practice project to explore the react framework and practice using API and AJAX request.</p>
                         </div>
                         <div class="project">
-                                <legend><a href="https://movietastic.000webhostapp.com/"><h1>Movie Ticketing</h2></a></legend>
+                                <a href="https://movietastic.000webhostapp.com/"><h1>Movie Ticketing</h2></a>   
                                 <a href="images/movie_ticketing.png" data-lightbox="image-1" data-title="Movie Ticketing">
                                     <img class="project-photo" width="350" src="images/movie_ticketing.png" alt="movie ticketing photo">
                                 </a>
@@ -70,7 +70,7 @@
                                 <p>This is my final project on Advance Web Development during my 4th year. It integrates PHPMailer library to email  the receipt of the ticket. This is the first website that I hosted online.</p><br>
                         </div>
                         <div class="project">
-                                <legend><h1>Movie Review</h2></legend>
+                                <h1>Movie Review</h2>   
                                 <a href="images/movie_review.png" data-lightbox="image-1" data-title="Movie Review">
                                     <img class="project-photo" width="350" src="images/movie_review.png" alt="movie review photo">
                                 </a>
@@ -78,7 +78,7 @@
                                 <p>This is my final project on Advance Web Development lab during my 4th year. It is created using OOP aproach and it integrates jquery framework.</p>
                         </div>
                         <div class="project">
-                                <legend><h1>Tic Tac Toe Game</h2></legend>
+                                <h1>Tic Tac Toe Game</h2>   
                                 <a href="images/tic_tac_toe.png" data-lightbox="image-1" data-title="Tic Tac Toe Game">
                                     <img class="project-photo" width="350" src="images/tic_tac_toe.png" alt="tic tac toe photo">
                                 </a>
@@ -86,7 +86,7 @@
                                 <p>This is a website I created while following a free crash course about react framework.</p>
                         </div>
                         <div class="project">
-                                <legend><h1>Online Shop using Laravel</h2></legend>
+                                <h1>Online Shop using Laravel</h2>  
                                 <a href="images/laravel_online_shop.png" data-lightbox="image-1" data-title="Laravel Online Shop">
                                     <img class="project-photo" width="350" src="images/laravel_online_shop.png" alt="online shop photo">
                                 </a>
