--- a/index.html
+++ b/index.html
@@ -54,14 +54,6 @@
                                 <p>The library patron monitoring system is part of our capstone project. I created this using PHP and JavaScript. It also integrates phpspreadsheet library to be able to export data in .xsls format</p>
                         </div>
                         <div class="project">
-                                <h1>Online Shop using React</h2>    
-                                <a href="images/react_online_shop.png" data-lightbox="image-1" data-title="Online Shop using React">
-                                    <img class="project-photo" width="350" src="images/react_online_shop.png" alt="online shop photo">
-                                </a>
-                                <h4>March 2021</h4>
-                                <p>I created this website on the summer of 2021 as a practice project to explore the react framework and practice using API and AJAX request.</p>
-                        </div>
-                        <div class="project">
                                 <a href="https://movietastic.000webhostapp.com/"><h1>Movie Ticketing</h2></a>   
                                 <a href="images/movie_ticketing.png" data-lightbox="image-1" data-title="Movie Ticketing">
                                     <img class="project-photo" width="350" src="images/movie_ticketing.png" alt="movie ticketing photo">
@@ -76,6 +68,14 @@
                                 </a>
                                 <h4>April 2022</h4>
                                 <p>This is my final project on Advance Web Development lab during my 4th year. It is created using OOP aproach and it integrates jquery framework.</p>
+                        </div>
+                        <div class="project">
+                            <h1>Online Shop using React</h2>    
+                            <a href="images/react_online_shop.png" data-lightbox="image-1" data-title="Online Shop using React">
+                                <img class="project-photo" width="350" src="images/react_online_shop.png" alt="online shop photo">
+                            </a>
+                            <h4>March 2021</h4>
+                            <p>I created this website on the summer of 2021 as a practice project to explore the react framework and practice using API and AJAX request.</p>
                         </div>
                         <div class="project">
                                 <h1>Tic Tac Toe Game</h2>   
@@ -93,6 +93,14 @@
                                 <h4>May 2021</h4>
                                 <p>This is my final project on Web Development during my 3rd year. It is created using laravel framework.</p>
                         </div>
+                        <div class="project">
+                            <h1>Employee Information using Laravel</h2>    
+                            <a href="images/laravel_employee_information.png" data-lightbox="image-1" data-title="Employee Information using Laravel">
+                                <img class="project-photo" width="350" src="images/laravel_employee_information.png" alt="employee information photo">
+                            </a>
+                            <h4>May 2021</h4>
+                            <p>This is my final project in INTECH 2201 during my 2nd year. It is created using laravel framework</p>
+                    </div>
                     </div>
                 </fieldset>
             </div>
